--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -10,13 +10,9 @@
 
     <%- include('nav.ejs') %>
 
-    <div class="white-bg">
-        <% for (let i = 0; i < posts.length; i++){ %>
-        <div class="list-box">
-          <h4><a href="/detail/<%= posts[i]._id %>"><%= posts[i].title %></a></h4>
-          <p><%= posts[i].content %></p>
-        </div> 
-        <%} %>
-      </div>
+    <div class="detail-bg">
+        <h4><%= post.title %></h4>
+        <p><%= post.content %></p>
+    </div>    
 </body>
 </html>
