--- a/views/list.ejs
+++ b/views/list.ejs
@@ -15,6 +15,7 @@
         <div class="list-box">
           <h4><a href="/detail/<%= posts[i]._id %>"><%= posts[i].title %></a></h4>
           <p><%= posts[i].content %></p>
+          <a href="/edit/<%= posts[i]._id %>">수정</a>
         </div> 
         <%} %>
       </div>
