--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -10,11 +10,12 @@
 
     <%- include('nav.ejs') %>
 
-    <form class="form-box" action="/update/<%= post._id %>" method="post">
-        <h4>수정</h4>
+    <form class="form-box" action="/edit" method="POST">
+        <h4>수정하기</h4>
+        <input name="id" value="<%= post._id %>" style="display:none">
         <input name="title" value="<%= post.title %>">
         <input name="content" value="<%= post.content %>">
         <button type="submit">전송</button>
-    </form> 
+      </form>
 </body>
 </html>
