--- a/views/list.ejs
+++ b/views/list.ejs
@@ -13,9 +13,9 @@
     <div class="white-bg">
         <% for (let i = 0; i < posts.length; i++){ %>
         <div class="list-box">
-          <h4><a href="/detail/<%= posts[i]._id %>"><%= posts[i].title %></a></h4>
+          <h4><a href="/detail/<%= posts[i]._id %>"><%= posts[i].title %></a>
+            <a href="/edit/<%= posts[i]._id %>">✏️</a></h4>
           <p><%= posts[i].content %></p>
-          <a href="/edit/<%= posts[i]._id %>">수정</a>
         </div> 
         <%} %>
       </div>
